--- a/wp-content/themes/fipradotcom/sass/layout/_people.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_people.scss
@@ -28,7 +28,7 @@
     @include media($media__medium-plus) { width:25%; height:300px; }
 
     @include media($media__large) { width:20%; height:330px; }
-    @include media($media__xlarge) { width:16.66666666666667%; height:310px; }
+    @include media($media__xlarge) { width:16%; height:310px; }
 
     &.full-width { width:100%; border:0; }
 
