--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -2131,7 +2131,7 @@ ul.team-member-expertise {
         height: 330px; } }
     @media screen and (min-width: 1400px) {
       .people-group-container .person {
-        width: 16.66667%;
+        width: 16%;
         height: 310px; } }
     .people-group-container .person.full-width {
       width: 100%;
@@ -4387,7 +4387,10 @@ embed, iframe, object {
     @media screen and (min-width: 481px) {
       .full-width-block-container.profile .full-width-block-content-container .full-width-block-content {
         text-align: left;
-        padding-right: 220px; } }
+        padding-left: 200px; } }
+    @media screen and (min-width: 801px) {
+      .full-width-block-container.profile .full-width-block-content-container .full-width-block-content {
+        padding-left: 250px; } }
     .full-width-block-container.profile .full-width-block-content-container .full-width-block-content h4 {
       color: #bfc5d2 !important; }
     .full-width-block-container.profile .full-width-block-content-container .full-width-block-content img {
@@ -4400,14 +4403,14 @@ embed, iframe, object {
           display: block;
           position: absolute;
           bottom: 0;
-          right: 20px;
-          height: 200px;
+          left: 20px;
+          height: 150px;
           top: 50%;
-          margin-top: -100px; } }
+          margin-top: -75px; } }
       @media screen and (min-width: 801px) {
         .full-width-block-container.profile .full-width-block-content-container .full-width-block-content img {
-          margin-top: -125px;
-          height: 250px; } }
+          margin-top: -100px;
+          height: 200px; } }
 
 .profile-content-area p.lead {
   font-size: 18px;
