--- a/wp-content/themes/fipradotcom/sass/layout/_layout.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_layout.scss
@@ -30,6 +30,9 @@
     @include span-columns(12);
     @include media($media__medium) { @include span-columns(8); }
     &.full-width { @include span-columns(12); }
+    //If layout includes the sidebar on the left, shift the primary column to the right
+    //so it appears first on mobile displays but to the right on desktop displays
+    &.left-sidebar { @include media($media__medium) { @include shift(4); } }
   }
 
   #secondary {
@@ -40,6 +43,9 @@
       &:not(:first-child) { margin-top:$v-rhythm * 2; padding-top:$v-rhythm; border-top:1px solid darken($color__fipra-lighter-gray, 7%); }
 //      @include media($media__medium) { padding-bottom: $v-rhythm; }
     }
+    //If layout includes the sidebar on the left, shift the secondary column to the left
+    //so it appears first on desktop displays but second on mobile displays
+    &.left-sidebar { @include media($media__medium) { @include shift(-12); } }
   }
 
   #page-footer {
