--- a/wp-content/themes/fipradotcom/sass/modules/_modules.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_modules.scss
@@ -245,6 +245,13 @@
     }
 }
 
+.google-map {
+  width: 100%;
+  height: 300px;
+  border: #ccc solid 1px;
+  margin: 0 0 $v-rhythm * 2 0;
+}
+
 .white-box {
   background-color:white;
 //  padding:$v-rhythm em(18px);
