--- a/wp-content/themes/fipradotcom/sass/elements/_lists.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_lists.scss
@@ -8,22 +8,23 @@ ul, ol {
   ul {
     list-style: none;
     &.no-bottom-margin { margin-bottom: 0; }
+    &.no-v-spacing { li { margin-bottom:0; } }
+  }
 
-    &.bullets {
-      li {
-        padding-left: em(30px);
-        text-indent: em(-30px);
-        margin-bottom: $v-rhythm;
-        line-height: $v-rhythm * 2;
-        &:before {
-          content: "■ ";
-          @include font-size(12);
-          padding-right: em(28px);
-          color: $color__fipra-blue;
-        }
+  ul.bullets,
+  .site-main ul {
+    li {
+      padding-left: em(30px);
+      text-indent: em(-30px);
+      margin-bottom: $v-rhythm;
+      line-height: $v-rhythm * 2;
+      &:before {
+        content: "■ ";
+        @include font-size(12);
+        padding-right: em(28px);
+        color: $color__fipra-blue;
       }
     }
-    &.no-v-spacing { li { margin-bottom:0; } }
   }
 
   ol {
