Fipriot Unit and Expertise now grabbed as an ID, not post object; single Expertise and Unit pages now grab assigned Fipriots, no need to set them separately

--- a/wp-content/themes/fipradotcom/sass/pages/_unit.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_unit.scss
@@ -20,7 +20,7 @@
 
   #team-menu-container {
     .full-width-block-content-container {
-      padding-bottom: 0;
+      //padding-bottom: 0;
 
       .svg-icon {
         float:left;
