--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -4482,6 +4482,13 @@ embed, iframe, object {
     fill: white;
     width: 60%; }
 
+.google-map-missing {
+  display: none;
+  font-size: 13px;
+  font-size: 0.8125rem;
+  font-style: italic;
+  line-height: 1.1; }
+
 @media screen and (max-width: 801px)  {
   #content-container.with-border {
     padding-top: 0; } }
@@ -4685,10 +4692,10 @@ embed, iframe, object {
   padding-right: 0.375em; }
   @media screen and (min-width: 801px) {
     #site-content .people-group-container {
-      height: 600px; } }
+      height: 630px; } }
   @media screen and (min-width: 1100px) {
     #site-content .people-group-container {
-      height: 600px; } }
+      height: 630px; } }
 
 .filter-group.hide {
   display: none; }
