Added PA Campaigns block to What We Do page; general minor visual tweaks

--- a/wp-content/themes/fipradotcom/sass/pages/_expertise.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_expertise.scss
@@ -10,9 +10,7 @@
           fill:white;
         }
 
-        h1 { margin-bottom: $v-rhythm; position:relative;
-          @include media($media__medium) { padding-left: 52px; }
-        }
+        h1 { margin-bottom: $v-rhythm; position:relative; }
       }
 
     }
