Template update: new page-wide layout available; what we do moved to new generic page-wide layout

--- a/wp-content/themes/fipradotcom/sass/elements/_lists.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_lists.scss
@@ -11,8 +11,7 @@ ul, ol {
     &.no-v-spacing { li { margin-bottom:0; } }
   }
 
-  ul.bullets,
-  .site-main ul {
+  ul.bullets {
     li {
       padding-left: em(30px);
       text-indent: em(-30px);
