Removed border from form container

--- a/wp-content/themes/fipradotcom/sass/forms/_forms.scss
+++ b/wp-content/themes/fipradotcom/sass/forms/_forms.scss
@@ -2,7 +2,7 @@
 @import "fields";
 
 .wpcf7-form {
-  border:1px solid $color__fipra-light-gray; padding:$v-rhythm 20px;
+  //border:1px solid $color__fipra-light-gray; padding:$v-rhythm 20px;
 
   .form-group { margin-bottom:$v-rhythm; }
 
