--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -4196,18 +4196,14 @@ ul.anchor-links-list, .filter-group-container .filter-list-container ul.filter-l
   background-image: -webkit-radial-gradient(white, #dde0e1);
   background-image: radial-gradient(  white, #dde0e1);
   border: 5px solid white;
-  box-shadow: #8c9699 0 2px 10px;
   -webkit-transition: all 0.2s;
           transition: all 0.2s;
   width: 200px; }
-  .photo-tile.dark-shadow {
-    box-shadow: #1c2029 0 2px 10px; }
 
 a .photo-tile:hover {
   opacity: 0.8;
   margin-top: 3px;
-  margin-bottom: -3px;
-  box-shadow: inherit 0 0 5px; }
+  margin-bottom: -3px; }
 
 .blue-text {
   color: #00257f !important; }
