Homepage hero banner title and blurb block are now all the same height, so links don't jump up and down

--- a/wp-content/themes/fipradotcom/sass/pages/_home.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_home.scss
@@ -53,7 +53,9 @@
       }
     }
     .full-width-block-content {
+
       @include media(max-width $media__small) {
+        .home-hero-title-and-blurb { margin-bottom:20px; }
         .blurb { display:none; }
       }
 
