Minor cosmetic updates

--- a/wp-content/themes/fipradotcom/sass/pages/_home.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_home.scss
@@ -53,7 +53,7 @@
       }
     }
     .full-width-block-content {
-
+      .blurb { @include font-size(18); }
       @include media(max-width $media__small) {
         .home-hero-title-and-blurb { margin-bottom:20px; }
         .blurb { display:none; }
