--- a/wp-content/themes/fipradotcom/sass/modules/_modules.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_modules.scss
@@ -310,6 +310,7 @@ a {
 
   .hide-s { @include media(max-width $media__medium) { display:none !important; } }
   .hide-m { @include media($media__medium) { display:none !important; } }
+  .show-l { @include media(max-width $media__medium) { display:none !important; } }
 
   .v-align { @include vertical-align; }
 
