--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -2184,11 +2184,18 @@ ul.team-member-expertise {
     .people-group-container .person.full-width {
       width: 100%;
       border: 0; }
-    .people-group-container .person h4 {
-      font-size: 21px;
-      font-size: 1.3125rem;
-      font-weight: 700;
-      line-height: 1.125rem !important; }
+    @media screen and (max-width: 801px)  {
+      .people-group-container .person h4 {
+        font-size: 16px;
+        font-size: 1rem;
+        font-weight: 700;
+        line-height: 0.975rem !important; } }
+    @media screen and (min-width: 801px) {
+      .people-group-container .person h4 {
+        font-size: 21px;
+        font-size: 1.3125rem;
+        font-weight: 700;
+        line-height: 1.125rem !important; } }
     .people-group-container .person h6 {
       margin: 6px 0 0 0;
       line-height: 1.4 !important;
@@ -2199,10 +2206,7 @@ ul.team-member-expertise {
       line-height: 1 !important;
       text-align: center;
       line-height: 0.75rem; }
-      @media screen and (max-width: 481px)  {
-        .people-group-container .person .person-profile-photo {
-          display: none !important; } }
-      @media screen and (min-width: 481px) and (max-width: 801px)  {
+      @media screen and (max-width: 801px)  {
         .people-group-container .person .person-profile-photo {
           width: 20%;
           float: left; }
@@ -2216,7 +2220,7 @@ ul.team-member-expertise {
             max-width: 90%; } }
     .people-group-container .person .person-details {
       padding: 0.75rem 4.375em 0.75rem 0.5em; }
-      @media screen and (min-width: 481px) and (max-width: 801px)  {
+      @media screen and (max-width: 801px)  {
         .people-group-container .person .person-details {
           width: 80%;
           float: left;
@@ -3786,7 +3790,7 @@ ul.anchor-links-list, .filter-group-container .filter-list-container ul.filter-l
         cursor: pointer; }
       ul.anchor-links-list li a, .filter-group-container .filter-list-container ul.filter-list li a {
         display: block;
-        padding: 0.375rem 0.375em 0.375rem 0; }
+        padding: 0.375rem 0.375em; }
       ul.anchor-links-list li i, .filter-group-container .filter-list-container ul.filter-list li i {
         position: absolute;
         right: 0.375em;
