Updated Contact Form 7 textarea height

--- a/wp-content/themes/fipradotcom/sass/forms/_forms.scss
+++ b/wp-content/themes/fipradotcom/sass/forms/_forms.scss
@@ -13,6 +13,8 @@
     }
   }
 
+  .wpcf7-textarea { height:150px; }
+
   label { font-weight: $font__bold; margin-bottom:$v-rhythm / 2; }
 
   input[type=submit] {
