--- a/wp-content/themes/fipradotcom/sass/pages/_profile.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_profile.scss
@@ -17,8 +17,11 @@
         @include media($media__medium) { padding-left:270px; }
         h4 { color: lighten($color__fipra-blue-gray, 35%) !important; }
         img {
-          display:none;
-          @include media($media__small) { display:block; position:absolute; bottom:0; width:150px; left:40px; top:50%; margin-top:-75px; }
+          display:block;
+          margin:0 auto;
+          margin-bottom:$v-rhythm;
+          width:150px;
+          @include media($media__small) { display:block; position:absolute; bottom:0; left:40px; top:50%; margin-top:-75px; margin-bottom:0; }
           @include media($media__medium) { margin-top:-100px; width:200px; }
         }
       }
