--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -677,6 +677,7 @@ table:not(.no-style) {
         width: 100%; }
 
 #header-container {
+  z-index: 99999;
   background-color: white; }
   #header-container::after {
     clear: both;
@@ -857,7 +858,7 @@ table:not(.no-style) {
     display: block;
     margin-right: 4.2434%;
     width: 100%;
-    padding: 1.5rem 1.5em 1.5rem 0;
+    padding: 1.5rem 1.5em 0 0;
     font-size: 14px;
     font-size: 0.875rem; }
     #footer-container footer .footer-section:last-child {
@@ -867,7 +868,8 @@ table:not(.no-style) {
         float: left;
         display: block;
         margin-right: 4.2434%;
-        width: 30.5044%; }
+        width: 30.5044%;
+        padding-bottom: 1.5rem; }
         #footer-container footer .footer-section:last-child {
           margin-right: 0; } }
 
@@ -4547,16 +4549,19 @@ embed, iframe, object {
     .full-width-block-container.profile .full-width-block-content-container .full-width-block-content h4 {
       color: #bfc5d2 !important; }
     .full-width-block-container.profile .full-width-block-content-container .full-width-block-content img {
-      display: none; }
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 0.75rem;
+      width: 150px; }
       @media screen and (min-width: 481px) {
         .full-width-block-container.profile .full-width-block-content-container .full-width-block-content img {
           display: block;
           position: absolute;
           bottom: 0;
-          width: 150px;
           left: 40px;
           top: 50%;
-          margin-top: -75px; } }
+          margin-top: -75px;
+          margin-bottom: 0; } }
       @media screen and (min-width: 801px) {
         .full-width-block-container.profile .full-width-block-content-container .full-width-block-content img {
           margin-top: -100px;
@@ -4822,11 +4827,16 @@ embed, iframe, object {
 .home #home-hero-carousel .full-width-block-content .blurb {
   font-size: 18px;
   font-size: 1.125rem; }
-@media screen and (max-width: 481px)  {
+@media screen and (max-width: 801px)  {
   .home #home-hero-carousel .full-width-block-content .home-hero-title-and-blurb {
     margin-bottom: 20px; }
+  .home #home-hero-carousel .full-width-block-content .home-hero-link a {
+    display: block;
+    margin: 0 0 6px 0; }
   .home #home-hero-carousel .full-width-block-content .blurb {
-    display: none; } }
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.3; } }
 .home #home-hero-carousel .owl-pagination {
   margin-top: -40px; }
   .home #home-hero-carousel .owl-pagination .owl-page span {
