--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -14,6 +14,10 @@
   }
 }
 
+#sticky-header {
+  z-index:999;
+  @include media(max-width $media__medium) { position:fixed; top:0; left:0; width:100%; }
+}
 
 #header-container {
   @include clearfix;
